# OXIDE-systemparamtrack-rust

./: .gitignore  README.md
.stitch/: DESIGN.md
backend/: Cargo.toml
backend/src/: main.rs  metrics.rs  models.rs  routes.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  i18n.tsx  index.css  main.tsx  theme.ts  types.ts  utils.ts
frontend/src/api/: useMetricsStream.ts  useStressTest.ts
frontend/src/components/: CoreMatrix.tsx  CpuChart.tsx  DiskList.tsx  MemoryChart.tsx  MetricCard.tsx  NetworkChart.tsx
